sumo/tests/traci/VariableRetrieval/Junction/errors/UnknownID/errors.traci
Error: Answered with error to command 169: Junction 'xxx' is not known
